src-liberty_parse-2.6/test/example.dup1.lib
library (L) {
   cell (C) {
   }
   scaled_cell (C, operating_cond1) {
   }
   scaled_cell (C, operating_cond2) {
   }
}
